assets/css/style.css
body {
    font-family: 'Courier New', Courier, monospace;
    color: ghostwhite;
    background: rgb(249, 72, 72, 0.3);
    font-size: 24px;
    background-image: url(../images/pavillion.jpg);
    background-size: 100%; 
    
    background-blend-mode: overlay;
   
}


a{
    
    text-decoration: none;
    color: white;
    transition-property: color;
    transition-duration: 1s;
}

a:hover{
    text-decoration: none;
    color:rgb(21, 186, 161);

}

#laurel-leaves {
    width: 55%;
    position: absolute;
    top: 3%;
    left: 35.1%;

}

.game {
    padding: 5%;
}

#answer {
    /* background: gray; */
    
    position: absolute;
    top: 58%;
    padding-left: 2px;
    letter-spacing: 7.5px;
    text-align: justify;
    transition-property: color;
    transition-duration: 1.5s;
}



#enter {
    
    transition-property: color;
    transition-duration: 4s;
}

